<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".EncuestaActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/logo_ventanas_griscopiaresize"
        >

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TituloBuscadores"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:id="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cuandultexplaboral"
            android:id="@+id/txtBuscEmpP1"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtBuscEmpP1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radioGroupP1">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/edtBuscEmplFechaUltExp"
                android:hint="@string/diamesanio"
                android:enabled="true" />
        </RadioGroup>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroupP2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radioGroupP3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="¿Qué tipo de trabajo te gustaría conseguir?"
                android:id="@+id/textView5"
                android:layout_below="@+id/textView3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Comercio"
                android:id="@+id/radioButton44" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Industria"
                android:id="@+id/radioButton45"
                android:layout_below="@+id/radioGroup2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Servicios"
                android:id="@+id/radioButton46" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Agricultura"
                android:id="@+id/radioButton47" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Otra"
                android:id="@+id/rbBuscEmplP3Otra" />

            <EditText
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:id="@+id/edtBuscEmplP3Otra" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EnviarRtas"
                android:id="@+id/btnBuscadorestEnvRtas"
                android:layout_gravity="right" />

        </RadioGroup>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroupP1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radioGroupP2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/pqcreesnotrabajo"
                android:id="@+id/txtBuscEmpP2"
                android:layout_below="@+id/textView3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/poredad"
                android:id="@+id/rbPorEdad" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faltaexperiencialaboral"
                android:id="@+id/radioButton6"
                android:layout_below="@+id/radioGroup2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faltacontactos"
                android:id="@+id/radioButton7" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notermineestudios"
                android:id="@+id/radioButton8" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pqdiscriminan"
                android:id="@+id/radioButton99" />


            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Otra"
                android:id="@+id/rbBuscEmplP2Otra" />

            <EditText
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:id="@+id/edtBuscEmplP2Otra" />

        </RadioGroup>
    </RelativeLayout>
</ScrollView>