<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".EncuestaActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TituloInactivos"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:id="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cuandultexplaboral"
            android:id="@+id/txtBuscEmpP1"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtBuscEmpP1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radioGroup">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/edtInactUltExp"
                android:hint="@string/diamesanio"
                android:enabled="true" />
        </RadioGroup>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radioGroupP2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/pqnobuscastrabajo"
                android:id="@+id/txtBuscEmpP2"
                android:layout_below="@+id/textView3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debotareascuidarflia"
                android:id="@+id/radioButton5" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/busqueynoencontre"
                android:id="@+id/radioButton6"
                android:layout_below="@+id/radioGroup2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/soloquieroestudiar"
                android:id="@+id/radioButton7" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Otra"
                android:id="@+id/rbInactP2Otra" />

            <EditText
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:id="@+id/edtInacP2Otra" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EnviarRtas"
                android:id="@+id/btnInactEnvRtas"
                android:layout_gravity="right" />

        </RadioGroup>

    </RelativeLayout>
</ScrollView>