<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".EncuestaActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SituacionLaboral"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:id="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="¿Cuál es tu situación laboral ahora?"
            android:id="@+id/txtBuscEmpP1"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtBuscEmpP1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radioGroup">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estoytrabajando"
                android:id="@+id/rbTrabajando" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notrabajoperobusco"
                android:id="@+id/rbBuscando"
                android:layout_below="@+id/radioGroup2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notrabnobusco"
                android:id="@+id/rbNobusca" />
        </RadioGroup>
    </RelativeLayout>
</ScrollView>